quandl script updates

--- a/quandl_api.ipynb
+++ b/quandl_api.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Functions for dealing with the quandl api.  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -20,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -32,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -49,27 +56,28 @@
     "    file_list = []\n",
     "    zipfile = ZipFile(StringIO(urlopen(zip_url).read()))\n",
     "    names = zipfile.namelist()\n",
+    "    dir_prefix = zip_url.split('/')[-2]\n",
     "    for name in names:\n",
     "        for line in zipfile.open(name).readlines():\n",
     "            file_list.append(line.strip('\\n').split(','))\n",
-    "    return file_list\n",
+    "    return file_list, dir_prefix\n",
     "# list comp ^^\n",
     "# file_list = [line for name in names for line in zipfile.open(name).readlines()...]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def get_files(file_names, target_directory_name):\n",
+    "def get_files(file_names, dir_prefix, target_directory_name):\n",
     "    '''INPUT: list of file names, target directory name\n",
     "       OUTPUT: csv files of passed names in target directory       \n",
     "    '''\n",
-    "    path = os.getcwd()+'/{}/'.format(target_directory_name)\n",
+    "    path = os.getcwd()+'/{}/{}'.format(target_directory_name, dir_prefix)\n",
     "    ql.ApiConfig.api_key = quandl_api_key\n",
     "    \n",
     "    if not os.path.exists(path):\n",
@@ -78,21 +86,54 @@
     "    for file_name in file_names:\n",
     "        #ql.get(file_name[0]).to_csv(path+file_name[1]+'.csv')\n",
     "        fixed_file_name = file_name[1].lower().replace(' - ', '_').replace(' ', '_')        \n",
-    "        file_path = '{}{}{}'.format(path, fixed_file_name, '.csv')\n",
+    "        file_path = '{}/{}.csv'.format(path, fixed_file_name)\n",
     "        if not os.path.isfile(file_path):\n",
     "            ql.get(file_name[0]).to_csv(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Get NVCA Data\n",
+    "file_names, dir_prefix = get_file_metadata('https://www.quandl.com/api/v3/databases/NVCA/codes')\n",
+    "get_files(file_names, dir_prefix,'test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "urls = ['https://www.quandl.com/api/v3/databases/NVCA/codes',\n",
+    "'https://www.quandl.com/api/v3/databases/RENCAP/codes',\n",
+    "'https://www.quandl.com/api/v3/databases/CVR/codes',\n",
+    "'https://www.quandl.com/api/v3/databases/COOLEY/codes']\n",
+    "\n",
+    "def quandl_data(lst):\n",
+    "    '''INPUT: List of url's pointing to zipped quandl db codes\n",
+    "       OUTPUT: Csv's from targeted db's nested in the 'data' directory '''\n",
+    "    for url in urls:\n",
+    "        file_names, dir_prefix = get_file_metadata(url)\n",
+    "        get_files(file_names, dir_prefix, 'data/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "file_names = get_file_metadata('https://www.quandl.com/api/v3/databases/NVCA/codes')\n",
-    "get_files(file_names,'data1')"
+    "quandl_data(urls)"
    ]
   }
  ],
