--- a/Population_cleanup.ipynb
+++ b/Population_cleanup.ipynb
@@ -405,336 +405,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "invalid type comparison",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-77-42868a18746e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'2010'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'CDP'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/IXChris/anaconda/lib/python2.7/site-packages/pandas/core/ops.pyc\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(self, other, axis)\u001b[0m\n\u001b[1;32m    761\u001b[0m                 \u001b[0mother\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    762\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 763\u001b[0;31m             \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mna_op\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    764\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0misscalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mres\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    765\u001b[0m                 raise TypeError('Could not compare %s type with Series' %\n",
-      "\u001b[0;32m/Users/IXChris/anaconda/lib/python2.7/site-packages/pandas/core/ops.pyc\u001b[0m in \u001b[0;36mna_op\u001b[0;34m(x, y)\u001b[0m\n\u001b[1;32m    716\u001b[0m                 \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    717\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNotImplemented\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 718\u001b[0;31m                     \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"invalid type comparison\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    719\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    720\u001b[0m                 \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: invalid type comparison"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/IXChris/anaconda/lib/python2.7/site-packages/numpy/lib/function_base.py:3834: RuntimeWarning: Invalid value encountered in percentile\n",
-      "  RuntimeWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>1790</th>\n",
-       "      <th>1800</th>\n",
-       "      <th>1810</th>\n",
-       "      <th>1820</th>\n",
-       "      <th>1830</th>\n",
-       "      <th>1840</th>\n",
-       "      <th>1850</th>\n",
-       "      <th>1860</th>\n",
-       "      <th>1870</th>\n",
-       "      <th>...</th>\n",
-       "      <th>1960</th>\n",
-       "      <th>1970</th>\n",
-       "      <th>1980</th>\n",
-       "      <th>1990</th>\n",
-       "      <th>2000</th>\n",
-       "      <th>2010</th>\n",
-       "      <th>STPLFIPS_2010</th>\n",
-       "      <th>LAT</th>\n",
-       "      <th>LON</th>\n",
-       "      <th>LON_BING</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>99.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.000000e+02</td>\n",
-       "      <td>1.000000e+02</td>\n",
-       "      <td>1.000000e+02</td>\n",
-       "      <td>1.000000e+02</td>\n",
-       "      <td>1.000000e+02</td>\n",
-       "      <td>1.000000e+02</td>\n",
-       "      <td>1.000000e+02</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>100.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>3383.160000</td>\n",
-       "      <td>974.350000</td>\n",
-       "      <td>1665.220000</td>\n",
-       "      <td>2796.140000</td>\n",
-       "      <td>3754.000000</td>\n",
-       "      <td>6003.220000</td>\n",
-       "      <td>9536.550000</td>\n",
-       "      <td>17536.393939</td>\n",
-       "      <td>31962.930000</td>\n",
-       "      <td>46930.150000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.355523e+05</td>\n",
-       "      <td>4.705104e+05</td>\n",
-       "      <td>4.703172e+05</td>\n",
-       "      <td>5.076025e+05</td>\n",
-       "      <td>5.628411e+05</td>\n",
-       "      <td>5.989981e+05</td>\n",
-       "      <td>2.684659e+06</td>\n",
-       "      <td>36.461108</td>\n",
-       "      <td>-98.135848</td>\n",
-       "      <td>-98.149568</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>2409.266411</td>\n",
-       "      <td>4865.484438</td>\n",
-       "      <td>8084.751579</td>\n",
-       "      <td>12391.825545</td>\n",
-       "      <td>15879.798451</td>\n",
-       "      <td>24209.423263</td>\n",
-       "      <td>36573.168639</td>\n",
-       "      <td>59297.830186</td>\n",
-       "      <td>104784.835604</td>\n",
-       "      <td>128879.283368</td>\n",
-       "      <td>...</td>\n",
-       "      <td>8.972562e+05</td>\n",
-       "      <td>9.000580e+05</td>\n",
-       "      <td>8.150115e+05</td>\n",
-       "      <td>8.399992e+05</td>\n",
-       "      <td>9.086710e+05</td>\n",
-       "      <td>9.209077e+05</td>\n",
-       "      <td>1.718395e+06</td>\n",
-       "      <td>5.512642</td>\n",
-       "      <td>17.668007</td>\n",
-       "      <td>17.692100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>7.000000e+03</td>\n",
-       "      <td>2.436300e+04</td>\n",
-       "      <td>4.770700e+04</td>\n",
-       "      <td>1.154880e+05</td>\n",
-       "      <td>2.089160e+05</td>\n",
-       "      <td>1.070000e+05</td>\n",
-       "      <td>21.325852</td>\n",
-       "      <td>-157.845315</td>\n",
-       "      <td>-157.857758</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>816.500000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>8.282450e+04</td>\n",
-       "      <td>1.196132e+05</td>\n",
-       "      <td>1.597318e+05</td>\n",
-       "      <td>1.917945e+05</td>\n",
-       "      <td>2.262095e+05</td>\n",
-       "      <td>2.468900e+05</td>\n",
-       "      <td>7.717500e+05</td>\n",
-       "      <td>33.372163</td>\n",
-       "      <td>-115.050412</td>\n",
-       "      <td>-115.015482</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>3574.500000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>100.000000</td>\n",
-       "      <td>2200.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.085440e+05</td>\n",
-       "      <td>2.771340e+05</td>\n",
-       "      <td>2.821255e+05</td>\n",
-       "      <td>3.160670e+05</td>\n",
-       "      <td>3.411305e+05</td>\n",
-       "      <td>3.739030e+05</td>\n",
-       "      <td>2.848000e+06</td>\n",
-       "      <td>36.149874</td>\n",
-       "      <td>-96.655356</td>\n",
-       "      <td>-96.667900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>5419.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1550.000000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>13772.250000</td>\n",
-       "      <td>22808.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.779115e+05</td>\n",
-       "      <td>5.050312e+05</td>\n",
-       "      <td>4.535135e+05</td>\n",
-       "      <td>4.728010e+05</td>\n",
-       "      <td>5.420020e+05</td>\n",
-       "      <td>6.004240e+05</td>\n",
-       "      <td>4.096000e+06</td>\n",
-       "      <td>39.765553</td>\n",
-       "      <td>-82.899797</td>\n",
-       "      <td>-82.911751</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>7333.000000</td>\n",
-       "      <td>33131.000000</td>\n",
-       "      <td>60515.000000</td>\n",
-       "      <td>96373.000000</td>\n",
-       "      <td>123706.000000</td>\n",
-       "      <td>202589.000000</td>\n",
-       "      <td>312710.000000</td>\n",
-       "      <td>515547.000000</td>\n",
-       "      <td>813669.000000</td>\n",
-       "      <td>942292.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>7.781984e+06</td>\n",
-       "      <td>7.895563e+06</td>\n",
-       "      <td>7.071639e+06</td>\n",
-       "      <td>7.322564e+06</td>\n",
-       "      <td>8.008278e+06</td>\n",
-       "      <td>8.175133e+06</td>\n",
-       "      <td>5.553000e+06</td>\n",
-       "      <td>61.177549</td>\n",
-       "      <td>-71.020173</td>\n",
-       "      <td>-71.056740</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8 rows × 28 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                ID          1790          1800          1810           1820  \\\n",
-       "count   100.000000    100.000000    100.000000    100.000000     100.000000   \n",
-       "mean   3383.160000    974.350000   1665.220000   2796.140000    3754.000000   \n",
-       "std    2409.266411   4865.484438   8084.751579  12391.825545   15879.798451   \n",
-       "min       1.000000      0.000000      0.000000      0.000000       0.000000   \n",
-       "25%     816.500000      0.000000      0.000000      0.000000       0.000000   \n",
-       "50%    3574.500000      0.000000      0.000000      0.000000       0.000000   \n",
-       "75%    5419.000000      0.000000      0.000000      0.000000       0.000000   \n",
-       "max    7333.000000  33131.000000  60515.000000  96373.000000  123706.000000   \n",
-       "\n",
-       "                1830           1840           1850           1860  \\\n",
-       "count     100.000000     100.000000      99.000000     100.000000   \n",
-       "mean     6003.220000    9536.550000   17536.393939   31962.930000   \n",
-       "std     24209.423263   36573.168639   59297.830186  104784.835604   \n",
-       "min         0.000000       0.000000       0.000000       0.000000   \n",
-       "25%         0.000000       0.000000            NaN       0.000000   \n",
-       "50%         0.000000       0.000000            NaN     100.000000   \n",
-       "75%         0.000000    1550.000000            NaN   13772.250000   \n",
-       "max    202589.000000  312710.000000  515547.000000  813669.000000   \n",
-       "\n",
-       "                1870     ...              1960          1970          1980  \\\n",
-       "count     100.000000     ...      1.000000e+02  1.000000e+02  1.000000e+02   \n",
-       "mean    46930.150000     ...      4.355523e+05  4.705104e+05  4.703172e+05   \n",
-       "std    128879.283368     ...      8.972562e+05  9.000580e+05  8.150115e+05   \n",
-       "min         0.000000     ...      0.000000e+00  7.000000e+03  2.436300e+04   \n",
-       "25%         0.000000     ...      8.282450e+04  1.196132e+05  1.597318e+05   \n",
-       "50%      2200.000000     ...      2.085440e+05  2.771340e+05  2.821255e+05   \n",
-       "75%     22808.000000     ...      4.779115e+05  5.050312e+05  4.535135e+05   \n",
-       "max    942292.000000     ...      7.781984e+06  7.895563e+06  7.071639e+06   \n",
-       "\n",
-       "               1990          2000          2010  STPLFIPS_2010         LAT  \\\n",
-       "count  1.000000e+02  1.000000e+02  1.000000e+02   1.000000e+02  100.000000   \n",
-       "mean   5.076025e+05  5.628411e+05  5.989981e+05   2.684659e+06   36.461108   \n",
-       "std    8.399992e+05  9.086710e+05  9.209077e+05   1.718395e+06    5.512642   \n",
-       "min    4.770700e+04  1.154880e+05  2.089160e+05   1.070000e+05   21.325852   \n",
-       "25%    1.917945e+05  2.262095e+05  2.468900e+05   7.717500e+05   33.372163   \n",
-       "50%    3.160670e+05  3.411305e+05  3.739030e+05   2.848000e+06   36.149874   \n",
-       "75%    4.728010e+05  5.420020e+05  6.004240e+05   4.096000e+06   39.765553   \n",
-       "max    7.322564e+06  8.008278e+06  8.175133e+06   5.553000e+06   61.177549   \n",
-       "\n",
-       "              LON    LON_BING  \n",
-       "count  100.000000  100.000000  \n",
-       "mean   -98.135848  -98.149568  \n",
-       "std     17.668007   17.692100  \n",
-       "min   -157.845315 -157.857758  \n",
-       "25%   -115.050412 -115.015482  \n",
-       "50%    -96.655356  -96.667900  \n",
-       "75%    -82.899797  -82.911751  \n",
-       "max    -71.020173  -71.056740  \n",
-       "\n",
-       "[8 rows x 28 columns]"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 53,
    "metadata": {
     "collapsed": false
@@ -846,17 +516,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "df.drop([['Name_2010'],['Place Type'], ], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 83,
    "metadata": {
     "collapsed": false
@@ -889,6 +548,91 @@
    "outputs": [],
    "source": [
     "df['STPLFIPS_2010']=df['STPLFIPS_2010'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LAT</th>\n",
+       "      <th>LAT_BING</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>City</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>New York City</th>\n",
+       "      <td>40.664274</td>\n",
+       "      <td>40.782001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Los Angeles</th>\n",
+       "      <td>34.019394</td>\n",
+       "      <td>34.053490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chicago</th>\n",
+       "      <td>41.837551</td>\n",
+       "      <td>41.884251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Houston</th>\n",
+       "      <td>29.780472</td>\n",
+       "      <td>29.760450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Philadelphia</th>\n",
+       "      <td>40.009375</td>\n",
+       "      <td>39.952278</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     LAT   LAT_BING\n",
+       "City                               \n",
+       "New York City  40.664274  40.782001\n",
+       "Los Angeles    34.019394  34.053490\n",
+       "Chicago        41.837551  41.884251\n",
+       "Houston        29.780472  29.760450\n",
+       "Philadelphia   40.009375  39.952278"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['LAT', 'LAT_BING']].head()\n",
+    "#df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df.drop(['Name_2010','Place Type','CityST', 'ID','LAT_BING', 'LON_BING'], axis=1, inplace=True)"
    ]
   },
   {
