--- a/eda7_25.ipynb
+++ b/eda7_25.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -14,12 +14,14 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import numbeo_scraper as ns\n",
+    "import get_bea_data as gbd\n",
+    "import population_cleanup as pc\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -37,19 +39,15 @@
     "\n",
     "columns = df.columns\n",
     "\n",
-    "rj_df = pd.read_table('data/rj_metrics.txt')\n",
-    "rj_df['state'] = (rj_df['City'].apply(lambda x: x.split(',')[-1]))\n",
-    "rj_df['city'] = rj_df['City'].apply(lambda x: x.split(',')[0])\n",
-    "rj_df['city'] = rj_df['city'].apply(lambda x: x.lower().replace('-', '_').replace(' ', '_'))\n",
-    "rj_df.drop('City', axis =1, inplace=True)\n",
-    "rj_df.set_index(['city'], inplace = True)\n",
+    "file_path ='data/rj_metrics.txt'\n",
+    "rj_df = pc.get_rj_data(file_path)\n",
     "\n",
     "new_df = pd.concat([df, rj_df], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -57,17 +55,9 @@
    "source": [
     "# clean and join bureau of economic affairs info\n",
     "\n",
-    "bea_df = pd.read_csv('data/bea.csv', header=2)\n",
-    "columns = bea_df.columns\n",
-    "new_columns = [u'city', u'bea_state', u'bea_2009', u'bea_2010', u'bea_2011', u'bea_2012',\n",
-    "       u'bea_2013', u'bea_2014', u'bea_what_is_this _crap']\n",
-    "bea_df.columns = new_columns\n",
-    "#bea_df = bea_df[1:]\n",
-    "bea_df['city'] = bea_df['bea_state'].apply(lambda x: x.split(',')[0])\n",
-    "bea_df['city'] = bea_df['city'].apply(lambda x: x.lower().replace('-', '_').replace(' ', '_'))\n",
-    "bea_df['bea_state'] = bea_df['bea_state'].apply(lambda x: x.split(',')[-1])\n",
-    "bea_df.set_index('city', inplace=True)\n",
-    "\n",
+    "url = 'http://www.bea.gov/newsreleases/regional/gdp_metro/2015/xls/gdp_metro0915.xls'\n",
+    "raw_bea = gbd.get_bea_data(url)\n",
+    "bea_df = gbd.clean_me(raw_bea)\n",
     "next_df = pd.concat([new_df, bea_df], axis=0)"
    ]
   },
