--- a/eda7_25.ipynb
+++ b/eda7_25.ipynb
@@ -21,99 +21,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# read in population (1790 - 2010) and rj metrics meetup info (2013-2014) and merge df's\n",
-    "\n",
-    "pop_df = pc.get_pop_data('data/1790-2010_MASTER.csv')\n",
-    "rj_df = pc.get_rj_data('data/rj_metrics.txt')\n",
-    "new_df = pd.concat([pop_df, rj_df], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# clean and join bureau of economic affairs info\n",
-    "\n",
-    "raw_bea = gbd.get_bea_data('http://www.bea.gov/newsreleases/regional/gdp_metro/2015/xls/gdp_metro0915.xls')\n",
-    "bea_df = gbd.clean_me(raw_bea)\n",
-    "next_df = pd.concat([new_df, bea_df], axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>city</th>\n",
-       "      <th>state_bc</th>\n",
-       "      <th>pct_college_grads_bc</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>irvine</td>\n",
-       "      <td>california</td>\n",
-       "      <td>65.0%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>seattle</td>\n",
-       "      <td>washington</td>\n",
-       "      <td>55.8%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>plano</td>\n",
-       "      <td>texas</td>\n",
-       "      <td>54.0%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>madison</td>\n",
-       "      <td>wisconsin</td>\n",
-       "      <td>52.9%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>scottsdale</td>\n",
-       "      <td>arizona</td>\n",
-       "      <td>52.2%</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "         city    state_bc pct_college_grads_bc\n",
-       "0      irvine  california                65.0%\n",
-       "1     seattle  washington                55.8%\n",
-       "2       plano       texas                54.0%\n",
-       "3     madison   wisconsin                52.9%\n",
-       "4  scottsdale     arizona                52.2%"
+       "(108, 40)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# read in population (1790 - 2010) and rj metrics meetup info (2013-2014) and merge df's\n",
+    "\n",
+    "pop_df = pc.get_pop_data('data/1790-2010_MASTER.csv')\n",
+    "rj_df = pc.get_rj_data('data/rj_metrics.txt')\n",
+    "new_df = pd.concat([pop_df, rj_df], axis=1)\n",
+    "new_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(492, 48)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# clean and join bureau of economic affairs info\n",
+    "\n",
+    "raw_bea = gbd.get_bea_data('http://www.bea.gov/newsreleases/regional/gdp_metro/2015/xls/gdp_metro0915.xls')\n",
+    "bea_df = gbd.clean_me(raw_bea)\n",
+    "next_df = pd.concat([new_df, bea_df], axis=0)\n",
+    "next_df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(592, 50)"
+      ]
+     },
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,6 +150,7 @@
     "        return df\n",
     "    else:\n",
     "        df = pd.read_csv(file_path)\n",
+    "        df.set_index('city', inplace=True)\n",
     "        return df\n",
     "\n",
     "cols = ['rank', 'city','state_bc','pct_college_grads_bc']\n",
@@ -184,109 +158,7 @@
     "another_df = pd.concat([next_df, df], axis=0)\n",
     "\n",
     "#df.to_csv('/data/biggestuscities/{}'.format(filename))\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "       nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, 'irvine',\n",
-       "       'seattle', 'plano', 'madison', 'scottsdale', 'san_francisco',\n",
-       "       'washington', 'fremont', 'raleigh', 'durham', 'atlanta',\n",
-       "       'minneapolis', 'austin', 'boston', 'portland', 'denver',\n",
-       "       'san_diego', 'new_jersey', 'charlotte', 'chandler',\n",
-       "       'lexington-fayette', 'gilbert', 'oakland', 'paul', 'boise', 'jose',\n",
-       "       'colorado', 'lincoln', 'greensboro', 'pittsburgh', 'new_york',\n",
-       "       'nashville-davidson', 'honolulu', 'irving', 'chicago',\n",
-       "       'baton_rouge', 'columbus', 'virginia', 'new_orleans', 'anchorage',\n",
-       "       'albuquerque', 'tampa', 'omaha', 'orlando', 'winston-salem',\n",
-       "       'cincinnati', 'angeles', 'henderson', 'kansas', 'tulsa', 'lubbock',\n",
-       "       'sacramento', 'arlington', 'dallas', 'long', 'houston', 'reno',\n",
-       "       'chesapeake', 'oklahoma', 'wichita', 'petersburg', 'louis',\n",
-       "       'indianapolis', 'chula_vista', 'aurora', 'louisville/jefferson',\n",
-       "       'fort_worth', 'baltimore', 'wayne', 'phoenix', 'norfolk', 'tucson',\n",
-       "       'jacksonville', 'antonio', 'mesa', 'anaheim', 'memphis',\n",
-       "       'philadelphia', 'buffalo', 'miami', 'paso', 'riverside',\n",
-       "       'las_vegas', 'garland', 'glendale', 'milwaukee', 'birmingham',\n",
-       "       'corpus', 'fresno', 'bakersfield', 'laredo', 'toledo', 'stockton',\n",
-       "       'las_vegas', 'cleveland', 'hialeah', 'bernardino', 'newark',\n",
-       "       'detroit', 'santa_ana'], dtype=object)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "another_df['city'].values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Index' object has no attribute 'lower'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-34-52c8f1b3851d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0manother_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Index' object has no attribute 'lower'"
-     ]
-    }
-   ],
-   "source": [
-    "another_df.index.lower()"
+    "another_df.shape"
    ]
   },
   {
