--- a/eda7_25.ipynb
+++ b/eda7_25.ipynb
@@ -1135,66 +1135,468 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city</th>\n",
+       "      <th>cost_of_living_index_2009</th>\n",
+       "      <th>rent_index_2009</th>\n",
+       "      <th>cost_of_living_plus_rent_index_2009</th>\n",
+       "      <th>groceries_index_2009</th>\n",
+       "      <th>restaurant_price_index_2009</th>\n",
+       "      <th>local_purchasing_power_index_2009</th>\n",
+       "      <th>state</th>\n",
+       "      <th>cost_of_living_index_2010</th>\n",
+       "      <th>rent_index_2010</th>\n",
+       "      <th>cost_of_living_plus_rent_index_2010</th>\n",
+       "      <th>groceries_index_2010</th>\n",
+       "      <th>restaurant_price_index_2010</th>\n",
+       "      <th>local_purchasing_power_index_2010</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>montreal</td>\n",
+       "      <td>101.80</td>\n",
+       "      <td>65.44</td>\n",
+       "      <td>87.37</td>\n",
+       "      <td>87.83</td>\n",
+       "      <td>62.93</td>\n",
+       "      <td>57.67</td>\n",
+       "      <td>canada</td>\n",
+       "      <td>85.34</td>\n",
+       "      <td>48.39</td>\n",
+       "      <td>68.83</td>\n",
+       "      <td>90.86</td>\n",
+       "      <td>58.18</td>\n",
+       "      <td>81.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>san_francisco</td>\n",
+       "      <td>100.14</td>\n",
+       "      <td>117.65</td>\n",
+       "      <td>107.09</td>\n",
+       "      <td>117.42</td>\n",
+       "      <td>105.24</td>\n",
+       "      <td>101.50</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>90.64</td>\n",
+       "      <td>81.55</td>\n",
+       "      <td>86.58</td>\n",
+       "      <td>114.42</td>\n",
+       "      <td>90.00</td>\n",
+       "      <td>114.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>new_york</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>ny</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "      <td>100.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>toronto</td>\n",
+       "      <td>80.42</td>\n",
+       "      <td>59.52</td>\n",
+       "      <td>72.13</td>\n",
+       "      <td>108.07</td>\n",
+       "      <td>57.72</td>\n",
+       "      <td>78.54</td>\n",
+       "      <td>canada</td>\n",
+       "      <td>83.37</td>\n",
+       "      <td>52.42</td>\n",
+       "      <td>69.53</td>\n",
+       "      <td>102.05</td>\n",
+       "      <td>62.16</td>\n",
+       "      <td>105.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tampa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>fl</td>\n",
+       "      <td>109.64</td>\n",
+       "      <td>39.98</td>\n",
+       "      <td>78.51</td>\n",
+       "      <td>99.16</td>\n",
+       "      <td>66.77</td>\n",
+       "      <td>88.87</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            city cost_of_living_index_2009 rent_index_2009  \\\n",
+       "0       montreal                    101.80           65.44   \n",
+       "1  san_francisco                    100.14          117.65   \n",
+       "2       new_york                    100.00          100.00   \n",
+       "3        toronto                     80.42           59.52   \n",
+       "4          tampa                       NaN             NaN   \n",
+       "\n",
+       "  cost_of_living_plus_rent_index_2009 groceries_index_2009  \\\n",
+       "0                               87.37                87.83   \n",
+       "1                              107.09               117.42   \n",
+       "2                              100.00               100.00   \n",
+       "3                               72.13               108.07   \n",
+       "4                                 NaN                  NaN   \n",
+       "\n",
+       "  restaurant_price_index_2009 local_purchasing_power_index_2009   state  \\\n",
+       "0                       62.93                             57.67  canada   \n",
+       "1                      105.24                            101.50      ca   \n",
+       "2                      100.00                            100.00      ny   \n",
+       "3                       57.72                             78.54  canada   \n",
+       "4                         NaN                               NaN      fl   \n",
+       "\n",
+       "  cost_of_living_index_2010 rent_index_2010  \\\n",
+       "0                     85.34           48.39   \n",
+       "1                     90.64           81.55   \n",
+       "2                    100.00          100.00   \n",
+       "3                     83.37           52.42   \n",
+       "4                    109.64           39.98   \n",
+       "\n",
+       "  cost_of_living_plus_rent_index_2010 groceries_index_2010  \\\n",
+       "0                               68.83                90.86   \n",
+       "1                               86.58               114.42   \n",
+       "2                              100.00               100.00   \n",
+       "3                               69.53               102.05   \n",
+       "4                               78.51                99.16   \n",
+       "\n",
+       "  restaurant_price_index_2010 local_purchasing_power_index_2010  \n",
+       "0                       58.18                             81.26  \n",
+       "1                       90.00                            114.16  \n",
+       "2                      100.00                            100.00  \n",
+       "3                       62.16                            105.33  \n",
+       "4                       66.77                             88.87  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged1.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2011</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>city</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>anaheim</th>\n",
+       "      <td>350742</td>\n",
+       "      <td>346997</td>\n",
+       "      <td>345012</td>\n",
+       "      <td>343248</td>\n",
+       "      <td>340559</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           2015    2014    2013    2012    2011\n",
+       "city                                           \n",
+       "anaheim  350742  346997  345012  343248  340559"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anaheim_df = pd.read_csv('data/biggestuscities/cities/anaheim_california.csv',\n",
+    "                        header=1)\n",
+    "anaheim_df.index.name =('city')\n",
+    "anaheim_df['city']= 'anaheim'\n",
+    "anaheim_df.set_index('city', inplace=True)\n",
+    "del anaheim_df['0']\n",
+    "anaheim_df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 190,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import glob\n",
+    "a = glob.glob('/Users/IXChris/Desktop/G/capstone/data/biggestuscities/cities/*.csv')\n",
+    "frame_names = [thing.split('/')[-1].split('.')[0].split('_')[0] for thing in a]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df_list =[]\n",
+    "columns =['drop_me', 2015, 2014, 2013, 2012, 2011]\n",
+    "for index, path in enumerate(a):\n",
+    "    temp_df = pd.read_csv(path)\n",
+    "    temp_df.index.name =('city')\n",
+    "    temp_df['city']= frame_names[index]\n",
+    "    temp_df.set_index('city', inplace=True)\n",
+    "    temp_df = temp_df[1:]  \n",
+    "    temp_df.columns = columns\n",
+    "    temp_df.drop('drop_me', axis=1)\n",
+    "    df_list.append(temp_df)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 226,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>drop_me</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2011</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>city</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>anchorage</th>\n",
+       "      <td>1</td>\n",
+       "      <td>298695</td>\n",
+       "      <td>301010</td>\n",
+       "      <td>300950</td>\n",
+       "      <td>298610</td>\n",
+       "      <td>296108</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           drop_me    2015    2014    2013    2012    2011\n",
+       "city                                                      \n",
+       "anchorage        1  298695  301010  300950  298610  296108"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_list[0]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 224,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>drop_me</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2011</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>city</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>anaheim</th>\n",
+       "      <td>1</td>\n",
+       "      <td>350742</td>\n",
+       "      <td>346997</td>\n",
+       "      <td>345012</td>\n",
+       "      <td>343248</td>\n",
+       "      <td>340559</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         drop_me    2015    2014    2013    2012    2011\n",
+       "city                                                    \n",
+       "anaheim        1  350742  346997  345012  343248  340559"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first = df_list.pop(0)\n",
+    "first"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "columns =['drop_me', 2015, 2014, 2013, 2012, 2011]\n",
+    "first.columns =columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2013</th>\n",
+       "      <th>2012</th>\n",
+       "      <th>2011</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>city</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>anaheim</th>\n",
+       "      <td>350742</td>\n",
+       "      <td>346997</td>\n",
+       "      <td>345012</td>\n",
+       "      <td>343248</td>\n",
+       "      <td>340559</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           2015    2014    2013    2012    2011\n",
+       "city                                           \n",
+       "anaheim  350742  346997  345012  343248  340559"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first.drop('drop_me', axis=1)"
+   ]
   },
   {
    "cell_type": "code",
