all pop data merged to master df

--- a/eda7_25.ipynb
+++ b/eda7_25.ipynb
@@ -1386,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 227,
    "metadata": {
     "collapsed": false
    },
@@ -1401,13 +1401,13 @@
     "    temp_df.set_index('city', inplace=True)\n",
     "    temp_df = temp_df[1:]  \n",
     "    temp_df.columns = columns\n",
-    "    temp_df.drop('drop_me', axis=1)\n",
+    "    temp_df.drop('drop_me', axis=1, inplace=True)\n",
     "    df_list.append(temp_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 228,
    "metadata": {
     "collapsed": false
    },
@@ -1420,7 +1420,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>drop_me</th>\n",
        "      <th>2015</th>\n",
        "      <th>2014</th>\n",
        "      <th>2013</th>\n",
@@ -1434,30 +1433,28 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>anchorage</th>\n",
-       "      <td>1</td>\n",
-       "      <td>298695</td>\n",
-       "      <td>301010</td>\n",
-       "      <td>300950</td>\n",
-       "      <td>298610</td>\n",
-       "      <td>296108</td>\n",
+       "      <th>anaheim</th>\n",
+       "      <td>350742</td>\n",
+       "      <td>346997</td>\n",
+       "      <td>345012</td>\n",
+       "      <td>343248</td>\n",
+       "      <td>340559</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           drop_me    2015    2014    2013    2012    2011\n",
-       "city                                                      \n",
-       "anchorage        1  298695  301010  300950  298610  296108"
+       "           2015    2014    2013    2012    2011\n",
+       "city                                           \n",
+       "anaheim  350742  346997  345012  343248  340559"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
